# dcm-classifier

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.txt  classify_study.py  dicom_inference_and_conversion.py  push_pip.sh  pyproject.toml  pyproject.txt  requirements.txt  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore-template.md  documentation_improvement.md  feature_request.md
.github/workflows/: ci.yml  pr_to_main.yml  push_to_main.yml
citations/: EndNote_citation.enw  RIS_citation.ris  bib_citation.bib
docs/: conf.py  requirements-docs.txt
docs/source/: conf.py  dcm_classifier.rst  index.rst  modules.rst
docs/source/_static/: dcm-classifier.css
docs/source/installation/: index.rst
models/: dt_classifier_plane.onnx  ova_rf_classifier.onnx  rf_classifier.onnx
scripts/: add_volume_label.py  analyze_data.py  anonymize_dicom_directory.py  check_filename_similarity.py  classify_mulitiple_studies.py  classify_study.py  combine_excel_file_directory.py  combine_excel_spreadsheets.py  convert_xlsx_to_csv.py  create_dicom_fields_sheet.py  create_smaller_train_dataset.py  create_training_sheet.py  data_further_processing.py  dcm-classifier-training-tutorial.ipynb  dcm-classifier-tutorial.ipynb  dir_to_xlsx.py  edit_dcm_files.py  get_sites_and_models.py  investigatet1w.py  label_150.py  label_all_feb29.py  label_iowastroke.py  label_minipig.py  label_nebraska.py  label_playground.py  label_predicthd.py  merge_excel_files.py  merge_labels_and_training_data.py  modality_classifier_training-new.py  modality_classifier_training-new20240226.py  modality_classifier_training.py  modality_classifier_training.py_backup  organize_dicom_to_bids.py  orientation_model_training.py  override_study_UIDs.py  parse_useful_column_headers.py  pydicom_info_cache.py  remove_duplicate_rows.py  run_all_dicom_data_sheets.sh  run_all_predict_hd.sh  (+7 more)
src/: __init__.py  create_dicom_fields_sheet.py  modality_classifier_training.py  orientation_model_training.py  override_study_UIDs.py
src/dcm_classifier/: README.md  __init__.py  classify_support.py  dicom_config.py  dicom_series.py  dicom_validator.py  dicom_volume.py  example_image_processing.py  image_type_inference.py  namic_dicom_typing.py  study_processing.py  utility_functions.py
src/namic_dicom/: README.md  dicom_series.py  dicom_validator.py  dicom_volume.py  image_type_inference.py  namic_dicom_typing.py  study_processing.py
testing/: conftest.py
testing/dcm_files/: a_valid_file.dcm  edit_dcm_files.py  invalid_file.dcm  new_MRBRAIN.DCM  valid_CT_file.dcm  valid_file.dcm
testing/integration_testing/: test_valid_dcm.py
testing/unit_testing/: test_dicom_data.py  test_dicom_validity.py  test_dicom_volume.py  test_namic_dicom_typing.py  test_study_processing.py
tests/: conftest.py  edit_dcm_files.py
tests/integration_testing/: test_classify_support.py
tests/testing_data/: .gitignore  mock_data.txt
tests/testing_data/anonymized_testing_data/all_fields_data/: all_fields_file.dcm
tests/testing_data/anonymized_testing_data/anonymized_dwi_series/DICOM/: 1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-1-sxzyrb.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-10-e2ws99.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-11-1f3745p.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-12-a2kgb2.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-13-v78wxd.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-14-vt0tpn.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-15-geavao.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-16-11hpj9w.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-17-itux3b.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-18-1n7qq1a.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-19-1krapto.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-2-m3fh9.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-20-27f98.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-21-onzawa.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-22-zcurzc.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-23-1ohi0oi.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-24-5hif1i.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-25-k2v87w.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-26-j2v5jh.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-3-1q9sxvd.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-4-j1vatm.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-5-1ezb2sl.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-6-bf4zvi.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-7-19cthhv.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-8-ekjcxh.dcm  1.3.12.2.1107.5.1.4.91493331060615608073226796366526631566-2-9-1pbtofx.dcm
tests/testing_data/anonymized_testing_data/contrast_data/with_contrast/: 0424.MR.PHD_050.8.0001.20100122.165135.421000.1md0v5z.dcm
tests/testing_data/anonymized_testing_data/contrast_data/without_contrast/: custom.0428.MR.PHD_144.1.1.20060428.123606.e29xoc.dcm
tests/testing_data/anonymized_testing_data/empty_data_fields/: empty_fields.dcm
tests/testing_data/anonymized_testing_data/invalid_data/: no_valid_fields.dcm
tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/: emptyBValue.dcm  invalidEchoTime.dcm  invalidPixelBW.dcm  (+6 more)
tests/testing_data/anonymized_testing_data/perfusion_data/: perfusion_image.dcm
tests/testing_data/integration_testing/classify_study_data/: output.json
tests/unit_testing/: test_dicom_data.py  test_dicom_series.py  test_dicom_validator.py  test_dicom_validity.py  test_dicom_volume.py  test_namic_dicom_typing.py  test_study_processing.py  test_utility_functions.py
(+453 files in other folders)
