[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcm_classifier"
version = '0.7.0'
authors = [
  { name="Michal Brzus", email="michal-brzus@uiowa.edu" },
  { name="Hans Johnson", email="hans-johnson@uiowa.edu" },
  { name="Cavan Riley", email="cavan-riley@uiowa.edu" },
]
description = "This is a consolidation of work from NAMIC efforts primarily at the University of Iowa."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "itk>=5.3.0",
    "itk-core>=5.3.0",
    "itk-filtering>=5.3.0",
    "itk-io>=5.3.0",
    "itk-numerics>=5.3.0",
    "onnxruntime>=1.16.2",
    "pandas>=1.4.0",
    "pyarrow>=6.0.0",
    "pydicom>=2.2.0",
    "python-gdcm>=3.0.10", # NOTE: python-gdcm replaces pylibjpeg for plugin support for pydicom
    "tabulate>=0.9.0",
]

[tool.hatchling.data]
include = ["models/ova_rf_classifier.onnx"]

[tool.pytest.ini_options]
minversion = "7.2"
pythonpath = [
  "src",
  "src/dcm_classifier"
]
# NOTE tests/__init__.py is empty.  passing it as the config files
# silences warnings about missing config.py and config-3.py files
# pytest-cov breaks code python debugger addopts = "--cov "
testpaths = [
    "tests/unit_testing"
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "scripts/**",
    "models/**",
    "tests/**",
    "**/example_image_processing.py",
    ]
source = [
    "src/dcm_classifier"
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data
  | profiling
)/
'''
